# globus-nexus-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  COPYING  Makefile  README.rst  globus_nexus_client.py  setup.cfg  setup.py
examples/: goauth_login.py  list_group_members.py
globus_nexus_client/: __init__.py  client.py  goauth_authorizer.py  response.py  version.py
