[metadata]
name = globus-nexus-client
version = 0.4.0a3
description = Unofficial Globus Nexus Client (based on SDK clients)
long_description = file: README.rst
url = https://github.com/sirosen/globus-nexus-client
author = Stephen Rosen
author_email = sirosen@globus.org

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.6.2
install_requires = globus-sdk==3.0.0b1
py_modules = globus_nexus_client

[bdist_wheel]
universal = 1


[isort]
profile = black
default_section = THIRDPARTY
known_first_party = globus_nexus_client


[flake8]
exclude = .git,.tox,__pycache__,.eggs,dist,venv,.venv*,build
# we enforce 80 char width with `black` "loosely", so flake8 should be set to
# not fail on up to 90 chars of width
max-line-length = 90

# based on the flake8 conf for `black` itself:
#   https://github.com/ambv/black/blob/master/.flake8
#
# W503/W504 conflict, black causes E203
ignore = W503,W504,E203,


[mypy]
ignore_missing_imports = true
